fix: comment center alignment in mini screen mode

--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -75,13 +75,13 @@
       }
     }
 
-    @media screen and (max-width: 767px) {
-      text-align: center!important;
+    // @media screen and (max-width: 767px) {
+    //   text-align: center!important;
 
-      p {
-        text-align: center!important;
-      }
-    }
+    //   p {
+    //     text-align: center!important;
+    //   }
+    // }
 
     a {
       color: inherit;
